# llm-gateway

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
cli/: pyproject.toml
cli/src/gatewayctl/: __init__.py  main.py
gateway/: .dockerignore  .env.example  Dockerfile  README.md  create_metric_filters.sh  pyproject.toml
gateway/dashboards/: cache_and_token_usage.json  health_overview.json  request_lifecycle.json  routing_reliability.json
gateway/src/gateway/: auth.py  config.json  context.py  engine.py  main.py  models.py  orchestrator.py  settings.py  validation.py
gateway/src/gateway/cache/: cache.py  embedders.py  in_memory_backend.py  in_memory_client.py  policy.py  prompt_cache.py  redis_client.py  redis_exact_cache_backend.py  redis_semantic_cache_backend.py  redis_semantic_client.py
gateway/src/gateway/dashboard_dist/: index.html
gateway/src/gateway/engine/: __init__.py  adaptor.py  errors.py  executor.py  verdict.py
gateway/src/gateway/routing/: __init__.py  aliases.py  chain.py  resolver.py  rules.py  selection.py
gateway/tests/: conftest.py  test_engine.py  test_main.py  test_orchestrator.py  test_validation.py
gateway/tests/cache/: fake_embedder.py  in_memory_backend.py  in_memory_backends.py  test_bedrock_embedder.py  test_cache.py  test_prompt_cache.py  test_redis_semantic_cache_backend.py
gateway/tests/engine/: test_adaptor.py  test_errors.py  test_executor.py  test_sanitize.py  test_verdict.py
gateway/tests/routing/: test_chain.py  test_resolver.py  test_rules.py  test_selection.py
(+57 files in other folders)
