[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatewayctl"
version = "0.1.0"
description = "CLI wrapper for operating the Mantis gateway"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.20.0",
]

[project.scripts]
mantis = "gatewayctl.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gatewayctl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
